docs: add doc for changes on oauth endpoints
